@@ -1,4 +1,5 @@
 0.05
+ - Cleanup files in tmp immediately.
 
 0.04 2024-02-10T10:40:24+01:00
  - Add -f option for print files in matching mode.
